--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -3,11 +3,13 @@
 one:
   title: MyString
   text: MyText
-  comment_counter: 1
+  comments_counter: 1
   likes_counter: 1
+  author: one
 
 two:
   title: MyString
   text: MyText
-  comment_counter: 1
+  comments_counter: 1
   likes_counter: 1
+  author: two
